
o Moved the utility functions for importing a mask (read.agpMask(),
  read.gapMask(), read.liftMask(), read.rmMask() and read.trfMask() functions)
  to the new IRanges package.

o Moved the generic functions for width(), shift(), restrict(), narrow(),
  reduce(), gaps(), reverse(), coverage(), subject(), views(), trim(), and
  subviews() to new IRanges package.

STRING MATCHING

o Added the vmatchPattern() and vcountPattern() generic functions with
  methods for XStringSet objects. They are the vectorized versions of
  matchPattern()/countPattern() i.e. the subject must be an XStringSet
  object (support for XStringViews objects will follow soon).

o Addition of the 'dups0' slot to the ByPos_MIndex class: this allows a more
  compact representation in memory of a ByPos_MIndex object that holds the
  hits of a set of patterns that has a lot of duplicates. The benefit is
  really noticeable when the patterns that are highly represented in the
  original dictionary have a lot of hits which seems to be typically the
  case when matching Solexa data against their reference genome. In this
  case, using the new 'dups0' slot can make the ByPos_MIndex object about 3
  times smaller.
  Take advantage of this new 'dups0' slot to improve the way duplicated
  patterns are handle thru the "PDict -> matchPDict() -> MIndex" pipe. The
  new strategy is to "remove them as early as possible and put them back as
  late as possible". This leads to a gain in speed and also less memory is
  needed to store the hits in the temporary buffer.

o Added the "whichPDict" generic function with a method for XString objects.

o Major rework of the PDict class, subclasses and the PDict() constructor:
    - Merged the CWdna_PDict and TBdna_PDict classes into the TB_PDict class
      (subclass of the PDict VIRTUAL class), a new container for storing a
      Trusted Band PDict object.
    - There are now 2 types of preprocessing: the "ACtree" type (the default)
      and the "Twobit" type.