@@ -152,7 +152,8 @@ plotBOC2 <- function(x, main)
 ### Dispatch on 'subject' (see signature of generic).
 ### 'algorithm' is ignored.
 setMethod("matchPattern", "BOC2_SubjectString",
-    function(pattern, subject, algorithm, max.mismatch, fixed)
+    function(pattern, subject, algorithm="auto",
+             max.mismatch=0, with.indels=FALSE, fixed=TRUE)
     {
         .matchPattern.BOC2(pattern, subject, max.mismatch, fixed)
     }
@@ -160,7 +161,8 @@ setMethod("matchPattern", "BOC2_SubjectString",
 
 ### Dispatch on 'subject' (see signature of generic).
 setMethod("countPattern", "BOC2_SubjectString",
-    function(pattern, subject, algorithm, max.mismatch, fixed)
+    function(pattern, subject, algorithm="auto",
+             max.mismatch=0, with.indels=FALSE, fixed=TRUE)
     {
         .matchPattern.BOC2(pattern, subject, max.mismatch, fixed, count.only=TRUE)
     }
